kubernetes/airflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: airflow
    component: webserver
  name: airflow-webserver
spec:
  selector:
    app: airflow
    component: webserver
  ports:
    - port: 8080
      name: airflow-ui
